After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590954 - render of TypeMatrix tm2020 geometry with some keys duplicated shows only one of them
render of TypeMatrix tm2020 geometry with some keys duplicated shows only one...
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Drawing
2.22.x
Other All
: Normal normal
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
Depends on:
Blocks:
 
 
Reported: 2009-08-06 14:13 UTC by Fred
Modified: 2009-12-07 11:20 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22


Attachments
picture of the Typematrix tm2020 keyboard (49.21 KB, image/jpeg)
2009-08-06 14:17 UTC, Fred
Details
screenshot of faulty Gnome applet which forget some duplicated keys (52.13 KB, image/png)
2009-08-06 14:17 UTC, Fred
Details
picture correctly rendered by xkbprint of the same description (PostScript format) (73.04 KB, application/postscript)
2009-08-06 14:18 UTC, Fred
Details
keytronic flexpro as shown by the applet (35.63 KB, image/png)
2009-10-08 14:22 UTC, Gildas Cotomale
Details
flexpro kbd with the patch (69.34 KB, image/png)
2009-10-30 12:18 UTC, Sergey V. Udaltsov
Details
TM2020 geometry with fix. (37.73 KB, image/png)
2009-11-06 12:38 UTC, Fred
Details

Description Fred 2009-08-06 14:13:33 UTC
Please describe the problem:
In the Gnome applet showing current keyboard map, when I've previously selected TypeMatrix tm2020 keyboard model (recently added in Xorg, see bug #23136 on Freedesktop.org), I get a layout of the keyboard where some keys are missing : indeed, this keyboard has some keys duplicated : two space, tabulation, backspace keys. On the rendered keyboard image, I get only one of them !

Steps to reproduce:
1. select TypeMatrix EZR tm2020 as keyboard geometry in the Gnome's keyboard applet
2. in this applet, show current layout


Actual results:
duplicated keys are missing (space, backspace, tab)

Expected results:
all keys shown

Does this happen every time?
yes

Other information:
I can also setup problematic config with following command line :
setxkbmap -geometry 'typematrix(tm2020)' -symbols 'pc+fr(bepo)'

The xkbprint program gives a good result :
setxkbmap -geometry 'typematrix(tm2020)' -symbols 'pc+fr(bepo)' -print|xkbcomp -o - -xkm - |   xkbprint -color -diffs -full -label symbols -level2 -pict all -o - -|gv -
Comment 1 Fred 2009-08-06 14:17:07 UTC
Created attachment 140032 [details]
picture of the Typematrix tm2020 keyboard
Comment 2 Fred 2009-08-06 14:17:58 UTC
Created attachment 140033 [details]
screenshot of faulty Gnome applet which forget some duplicated keys
Comment 3 Fred 2009-08-06 14:18:48 UTC
Created attachment 140034 [details]
picture correctly rendered by xkbprint of the same description (PostScript format)
Comment 4 Gildas Cotomale 2009-10-08 14:19:08 UTC
the same result is noticed with the Keytronic flexpro geometry and this keyboard has a splitted space key..
Comment 5 Gildas Cotomale 2009-10-08 14:22:38 UTC
Created attachment 145053 [details]
keytronic flexpro as shown by the applet
Comment 6 Sergey V. Udaltsov 2009-10-08 21:22:41 UTC
The current logic of libgnomekbd is slightly broken - it does not handle repeating keycodes well... Will try to fix that.
Comment 7 Sergey V. Udaltsov 2009-10-08 21:43:27 UTC
fixed in git. please check.
Comment 8 Fred 2009-10-22 16:49:26 UTC
I've tried to patch the libgnomekbd package from Debian Sid (2.28.0-2) with patch given from git (commit d1f0758a82776031184c73a8366d4bdca29e9bb9). I then built some packages, and used on a Debian Sid system : I didn't notice any change when showing the Keytronic flexpro (TypeMatrix 2020 isn't in xkeyboard-config's Sid package yet) keyboard mapping with Gnome Keyboard applet, even after a disconnect or a reboot. I wonder if I've done an error or if the bug is already here ?
Comment 9 Sergey V. Udaltsov 2009-10-30 12:18:00 UTC
I chosen flexpro model. The picture with the patch is different from the picture without it - several new keys appeared (duplicated keycodes).
Comment 10 Sergey V. Udaltsov 2009-10-30 12:18:49 UTC
Created attachment 146565 [details]
flexpro kbd with the patch
Comment 11 Fred 2009-11-06 12:30:22 UTC
I've retested after installing updated xkb-data package with TypeMatrix 2020 keyboard geometry definition, and it works ! I was misleaded by the strange geometry of the Keytronic Flexpro keyboard (its Return key has wrong shape).

  Thanks for your picture, it helped me to check I get the same result as yours :-)
Comment 12 Fred 2009-11-06 12:38:18 UTC
Created attachment 147092 [details]
TM2020 geometry with fix.
Comment 13 Bastien Nocera 2009-12-03 14:11:06 UTC
-#define noKBDRAW_DEBUG
+#define KBDRAW_DEBUG 

Reopening, some debug sipped in.
Comment 14 Sergey V. Udaltsov 2009-12-05 17:30:37 UTC
Bastien, that should be noKBDRAW_DEBUG
Comment 15 Bastien Nocera 2009-12-07 11:20:27 UTC
(In reply to comment #14)
> Bastien, that should be noKBDRAW_DEBUG

Right, as you already fixed in:
http://git.gnome.org/cgit/libgnomekbd/commit/?id=76929f1dab171bd5aba00dfa53ffca6cdd79a38e