Properly handle scenario when one keycode has multiple keys

https://bugzilla.gnome.org/show_bug.cgi?id=590954